compiler/tests/success/arm-m4/bug_375.jazz
export
fn main() -> reg u32 {
    reg u32 x;
    x = !1;
    return x;
}
